--- a/templates/landing.html
+++ b/templates/landing.html
@@ -13,39 +13,42 @@
 
 <body>
     <div class="container">
+        <div class="login">
+            <img class="home-logo-landing" src="../static/images/home_logo.PNG" >
+            
+            <div class="row w-100">
+                <div class="col-sm justify-content-center" >
+                    <h6 class="homepage-label">Functions</h6>
+                    <a href="/usermanagement" class="btn btn-primary w-100  mb-3" href="#" role="button" style="font-size:x-small;">User Management</a>
+                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Permission Management</a>
+                   
+                </div>
+                <div class="col-sm justify-content-center">
+                    <h6 class="homepage-label">View Statistics</h6>
+                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Attendance</a>
+                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Module Satisfaction</a>
+                    <a class="btn btn-primary w-100 mb-3" href="#" role="button"style="font-size:x-small;">Marks</a>
+                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Quiz Results</a>
+                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Latness</a>
+                </div>
+    
+                <div class="signout-button">
+                    <a href="/" class="btn btn-danger w-100 "  >Sign Out</a>
+        
+                </div>  
+            
+    
+        </div>
+        </div>
+        
+        
+    
+    
+        </div>
 
     </div>    
 
-    <div class="login">
-        <img class="home-logo" src="../static/images/home_logo.PNG" >
-        
-        <div class="row w-100">
-            <div class="col-sm justify-content-center" >
-                <a class="btn btn-primary w-100  mb-3" href="#" role="button" style="font-size:x-small;">User Management</a>
-                <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Permission Management</a>
-               
-            </div>
-            <div class="col-sm justify-content-center">
-                <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Attendance</a>
-                <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Module Satisfaction</a>
-                <a class="btn btn-primary w-100 mb-3" href="#" role="button"style="font-size:x-small;">Marks</a>
-                <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Quiz Results</a>
-                <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Latness</a>
-            </div>
-
-            <div class="signout-button">
-                <a href="/" class="btn btn-danger w-100 "  >Sign Out</a>
     
-            </div>  
-        
-
-    </div>
-    </div>
-    
-    
-
-
-    </div>
     
 
 </body>
