--- a/templates/landing.html
+++ b/templates/landing.html
@@ -28,7 +28,7 @@
                     <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Attendance</a>
                     <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Module Satisfaction</a>
                     <a class="btn btn-primary w-100 mb-3" href="#" role="button"style="font-size:x-small;">Marks</a>
-                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Quiz Results</a>
+                    <a href="/quizresults" class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Quiz Results</a>
                     <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Latness</a>
                 </div>
     
@@ -40,10 +40,6 @@
     
         </div>
         </div>
-        
-        
-    
-    
         </div>
 
     </div>    
