--- a/templates/usermanagement.html
+++ b/templates/usermanagement.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>WMGSIS</title>
-    
+    <title>User Management</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
@@ -14,7 +14,9 @@
 <body>
     <div class="container">
         <div class="general-background">
-            <img class="home-logo-landing" src="../static/images/home_logo.PNG" >
+            <img class="home-logo-general" src="../static/images/home_logo.PNG" >
+            <h3>User Management</h3>
+            <a href="/landing" class="bi bi-arrow-left backlandingbutton">Back to landing page</a>
 
 
 
