added basic login functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <br/>
             <div>
                 <p>Password</p>
-                <input/>
+                <input type="password" name="userpassword"/>
             </div>
             <div>
             <div class="login-button">
