--- a/templates/quizresults.html
+++ b/templates/quizresults.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Quiz Results</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
@@ -20,8 +21,8 @@
             <a href="/landing" class="bi bi-arrow-left backlandingbutton">Back to landing page</a>
             <div class="sibuttons">
                 <a class="btn btn-primary me-1"     href="#" role="button" >Upload New Data</a>
-                <a class="btn btn-primary me-1" href="#" role="button" >View Raw Data</a>
-                <a class="btn btn-primary me-1" href="#" role="button" >Update Existing Data</a>
+                <a class="btn btn-primary me-1" href={{ url_for('viewdata') }} role="button" >View Raw Data</a>
+                <a class="btn btn-primary me-1" href="#" role="button" onclick='myFunction()' >Update Existing Data</a>
                 <a class="btn btn-primary me-1" href="#" role="button" >Delete Data</a>
 
             </div>
@@ -31,9 +32,10 @@
                 </a>
               
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">WM160</a></li>
+                  <li><a class="dropdown-item" href="#">WM161</a></li>
+                  <li><a class="dropdown-item" href="#">WM162</a></li>
+                  <li><a class="dropdown-item" href="#">WM163</a></li>
                 </ul>
               </div>
             
