--- a/templates/landing.html
+++ b/templates/landing.html
@@ -33,7 +33,7 @@
                 </div>
     
                 <div class="signout-button">
-                    <a href="/" class="btn btn-danger w-100 "  >Sign Out</a>
+                    <a href={{ url_for('signout') }} class="btn btn-danger w-100 "  >Sign Out</a>
         
                 </div>  
             
