prevent user from accessing pages without logging in

--- a/templates/quizresults.html
+++ b/templates/quizresults.html
@@ -21,7 +21,7 @@
             <a href="/landing" class="bi bi-arrow-left backlandingbutton">Back to landing page</a>
             <div class="sibuttons">
                 <a class="btn btn-primary me-1"     href="#" role="button" >Upload New Data</a>
-                <a class="btn btn-primary me-1" href={{ url_for('viewdata') }} role="button" >View Raw Data</a>
+                <a class="btn btn-primary me-1" href={{ url_for('viewdata') }} role="button" target="_blank" >View Raw Data</a>
                 <a class="btn btn-primary me-1" href="#" role="button" onclick='myFunction()' >Update Existing Data</a>
                 <a class="btn btn-primary me-1" href="#" role="button" >Delete Data</a>
 
