output the std deviation and average for a selected module

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,3 +119,10 @@ body,
     padding-bottom: 10px;
     padding-top: 10px;    
 }
+
+.quiz-results-info {
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+
+}
