added comments and check if no module is selected

--- a/templates/quizresults.html
+++ b/templates/quizresults.html
@@ -51,7 +51,7 @@
 
         
             </div>
-            <form action="{{ url_for('quizresults')}}" method="post"> 
+            <form action="{{ url_for('quizresults')}}" method="post" enctype="multipart/form-data"> 
             
             <div class="dropdown">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
