--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,7 @@ body,
 
 
 .home-logo {
-    width: 160px;
+    width: 150px;
     height: auto;
 }
 
@@ -61,17 +61,18 @@ body,
 }
 
 .home-logo-general {
-    width: 160px;
+    width: 150px;
     height: auto;
-    
-
 }
 .homepage-label {
     text-align: center;
     font-size: 15px;
     font-weight: bold;
 }
-
+.main-wrapper {
+    display: flex;
+    flex-direction: column;
+}
 .general-background {
     
     border-radius: 10px;
@@ -84,6 +85,8 @@ body,
     left: 0;
     right: 0;
     font-family: Inter;
+    display: flex;
+    flex-direction: row;
     
 }
 
