removal or user management page

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -19,7 +19,7 @@
             <div class="row w-100">
                 <div class="col-sm justify-content-center" >
                     <h6 class="homepage-label">Functions</h6>
-                    <a href="/usermanagement" class="btn btn-primary w-100  mb-3" href="#" role="button" style="font-size:x-small;">User Management</a>
+                    <a class="btn btn-primary w-100  mb-3" href="#" role="button" style="font-size:x-small;">User Management</a>
                     <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Permission Management</a>
                    
                 </div>
