--- a/templates/quizresults.html
+++ b/templates/quizresults.html
@@ -56,7 +56,7 @@
 
         
             </div>
-            <!-- Anothe form is used for the dropdown linksm where the selected module is posted to the backend -->
+            <!-- Another form is used for the dropdown linksm where the selected module is posted to the backend -->
             <form action="{{ url_for('quizresults')}}" method="post" enctype="multipart/form-data"> 
             
             <div class="dropdown">
