--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,131 +1,113 @@
 @import url('https://fonts.googleapis.com/css?family=Inter&display=swap');
 @media (-webkit-device-pixel-ratio: 1.25) {
-    * {
-      zoom: 0.8;
-    }
+  * {
+    zoom: 0.8;
   }
-
-
-
+}
 
 body {
-    background-image: url('../images/background1.jpg');
-    height: 100vh;
-    background-size: cover;
+  background-image: url('../images/background1.jpg');
+  height: 100vh;
+  background-size: cover;
 }
 body,
-  html {
-    height: 100%;
-   
-  
+html {
+  height: 100%;
 }
 
 .login {
-    margin: 0 auto;
-    border-radius: 10px;
-    background-color: white;
-    height: 500px;
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 25px;
-    font-family: Inter;
+  margin: 0 auto;
+  border-radius: 10px;
+  background-color: white;
+  height: 500px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+  font-family: Inter;
 }
 .login-text {
-    color: grey;
-    display: inline-block;
-    text-align:left;
+  color: grey;
+  display: inline-block;
+  text-align: left;
 }
 .container {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-    
-  }
-
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
 
 .home-logo {
-    width: 150px;
-    height: auto;
+  width: 150px;
+  height: auto;
 }
 
 .home-logo-landing {
-    width: 160px;
-    height: auto;
-    margin-top: -5%;
-
+  width: 160px;
+  height: auto;
+  margin-top: -5%;
 }
 
 .home-logo-general {
-    width: 150px;
-    height: auto;
+  width: 150px;
+  height: auto;
 }
 .homepage-label {
-    text-align: center;
-    font-size: 15px;
-    font-weight: bold;
+  text-align: center;
+  font-size: 15px;
+  font-weight: bold;
 }
 .main-wrapper {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .general-background {
-    
-    border-radius: 10px;
-    background-color: white;
-    padding: 20px 20px 20px 20px;
-    margin: 20px 20px;
-    height: 95%;
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    right: 0;
-    font-family: Inter;
-    display: flex;
-    flex-direction: row;
-    
+  border-radius: 10px;
+  background-color: white;
+  padding: 20px 20px 20px 20px;
+  margin: 20px 20px;
+  height: 95%;
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  right: 0;
+  font-family: Inter;
+  display: flex;
+  flex-direction: row;
 }
 
-.backlandingbutton {  
-    color: #4CBAE9 ;
-    font-weight: 700;
-  
-    text-decoration: none;
-    
-    
-    
-   
+.backlandingbutton {
+  color: #4cbae9;
+  font-weight: 700;
+
+  text-decoration: none;
 }
 .title {
-    font-size: 22px;
+  font-size: 22px;
 }
 
 .login-button {
-    margin-top: 25px;
-  
+  margin-top: 25px;
 }
 
 .landing-buttons-right {
-    text-align: right;
-
-
+  text-align: right;
 }
 
 .sibuttons {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding-bottom: 10px;
-    padding-top: 10px;    
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 .quiz-results-info {
-    display: flex;
-    flex-direction: column;
-    padding-top: 10px;
-
+  display: flex;
+  flex-direction: column;
+  padding-top: 10px;
 }
