--- a/templates/quizresults.html
+++ b/templates/quizresults.html
@@ -61,7 +61,7 @@
             
             <div class="dropdown">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                  Select Module
+                  {{selectedmodule}}
                 </a>
                 
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
