--- a/templates/landing.html
+++ b/templates/landing.html
@@ -19,17 +19,17 @@
             <div class="row w-100">
                 <div class="col-sm justify-content-center" >
                     <h6 class="homepage-label">Functions</h6>
-                    <a class="btn btn-primary w-100  mb-3" href="#" role="button" style="font-size:x-small;">User Management</a>
-                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Permission Management</a>
+                    <a class="btn btn-secondary w-100  mb-3" href="#" role="button" style="font-size:x-small;">User Management</a>
+                    <a class="btn btn-secondary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Permission Management</a>
                    
                 </div>
                 <div class="col-sm justify-content-center">
                     <h6 class="homepage-label">View Statistics</h6>
-                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Attendance</a>
-                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Module Satisfaction</a>
-                    <a class="btn btn-primary w-100 mb-3" href="#" role="button"style="font-size:x-small;">Marks</a>
+                    <a class="btn btn-secondary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Attendance</a>
+                    <a class="btn btn-secondary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Module Satisfaction</a>
+                    <a class="btn btn-secondary w-100 mb-3" href="#" role="button"style="font-size:x-small;">Marks</a>
                     <a href="/quizresults" class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Quiz Results</a>
-                    <a class="btn btn-primary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Latness</a>
+                    <a class="btn btn-secondary w-100 mb-3" href="#" role="button" style="font-size:x-small;">Latness</a>
                 </div>
     
                 <div class="signout-button">
