Added pop up form for all functions

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,3 +111,22 @@ html {
   flex-direction: column;
   padding-top: 10px;
 }
+
+.popup-form {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+
+  
+}
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  background-color: white;
+}
