--- a/templates/quizresults.html
+++ b/templates/quizresults.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
+    <script type="text/javascript" src="../static/js/popup.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.2/chart.min.js" integrity="sha512-zjlf0U0eJmSo1Le4/zcZI51ks5SjuQXkU0yOdsOBubjSmio9iCUp8XPLkEAADZNBdR9crRy3cniZ65LF2w8sRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    <link rel="stylesheet" href="../static/css/style.css">
 </head>
@@ -27,34 +28,54 @@
             <div class="sibuttons">
 
               <!-- Here a form is used for each function so that a POST request can be used after submitting, also generating a URL -->
-              <form style="display: flex;" action={{ url_for('uploadnewdata') }} method="POST" enctype="multipart/form-data">
-                <label for="files" class="btn btn-primary me-1">Upload New Data</label>
-                <input id="files" style="visibility:hidden;width: 0;" type="file" name="file"/>
-                <input type="submit" class="btn btn-primary me-1" />
-
-              </form>
-              
-              <form style="display: flex;" action={{ url_for('updateexistingdata') }} method="POST" enctype="multipart/form-data">
-                <label for="files2" class="btn btn-primary me-1">Update Existing Data</label>
-                <input id="files2" style="visibility:hidden;width: 0;" type="file" name="files2">
-                <input type="submit" class="btn btn-primary me-1" />
-              </form>
-
-              <form style="display: flex;" action={{ url_for('deletedata') }} method="POST" enctype="multipart/form-data">
-                <label for="files3" class="btn btn-primary me-1">Delete Data</label>
-                <input id="files3" style="visibility:hidden;width: 0;" type="file" name="files3">
-                <input type="submit" class="btn btn-primary me-1"  />
-              </form>
-
-
-
-              <form style="display: flex;" action={{ url_for('viewdata') }} target="_blank" >
-                <input class="btn btn-primary me-1"  type="submit" value="View Raw Data">
-              </form>
+             
 
               
+              <button  class="btn btn-primary me-1" onclick="openForm('uploadForm')">Upload New Data</button>
+              <div class="popup-form" id="uploadForm">
+                <form action={{ url_for ('uploadnewdata')}} class="form-container" method="POST" enctype="multipart/form-data">
+                  <h3>Upload New Data</h3>
+                  <input type="text" placeholder="Student ID" name="student-id" required>
+              
+                  <input type="text" placeholder="Module" name="module" required>
+                  <input type="text" placeholder="Quiz Result" name="quiz-result" required>
+    
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                  <button type="button" class="btn btn-primary" onclick="closeForm('uploadForm')">Close</button>
+                </form>
+              </div>
+              
+              <button  class="btn btn-primary me-1" onclick="openForm('updateForm')">Update Existing Data</button>
+              <div class="popup-form" id="updateForm">
+                <form action={{ url_for ('updateexistingdata')}} class="form-container" method="POST" enctype="multipart/form-data">
+                  <h3>Update Existing Data</h3>
+                  <input type="text" placeholder="Student ID" name="student-id" required>
+              
+                  <input type="text" placeholder="Module" name="module" required>
+                  <input type="text" placeholder="Quiz Result" name="quiz-result" required>
+    
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                  <button type="button" class="btn btn-primary" onclick="closeForm('updateForm')">Close</button>
+                </form>
+              </div>
 
-        
+
+
+              <button class="btn btn-primary me-1" onclick="openForm('deleteForm')">Delete Data</button>
+              <div class="popup-form" id="deleteForm">
+                <form action={{ url_for ('deletedata')}} class="form-container" method="POST" enctype="multipart/form-data">
+                  <h3>Delete Data</h3>
+                  <input type="text" placeholder="Student ID" name="student-id" required>  
+                  <input type="text" placeholder="Module" name="module" required>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                  <button type="button" class="btn btn-primary" onclick="closeForm('deleteForm')">Close</button>
+                  
+                </form>
+
+              </div>
+              <form action={{ url_for('viewdata') }} target="_blank" >
+                <button class="btn btn-primary me-1"  type="submit" >View Raw Data</button> 
+              </form>
             </div>
             <!-- Another form is used for the dropdown links where the selected module is posted to the backend -->
             <form action="{{ url_for('quizresults')}}" method="post" enctype="multipart/form-data"> 
